--- a/apps/docs/content/docs/guides/index.mdx
+++ b/apps/docs/content/docs/guides/index.mdx
@@ -1,18 +1,18 @@
 ---
 title: Guides
-description: Step-by-step tutorials for common Converge patterns
+description: Step-by-step tutorials for common RippleDB patterns
 ---
 
 import { Cards, Card } from 'fumadocs-ui/components/card';
 
 # Guides
 
-Step-by-step tutorials for building with Converge.
+Step-by-step tutorials for building with RippleDB.
 
 <Cards>
   <Card 
     title="Server Setup" 
-    description="Build a production-ready Converge server"
+    description="Build a production-ready RippleDB server"
     href="/docs/guides/server-setup"
   />
   <Card 
@@ -31,6 +31,6 @@ Step-by-step tutorials for building with Converge.
 
 | Guide | Use When |
 |-------|----------|
-| Server Setup | Starting a new Converge backend |
+| Server Setup | Starting a new RippleDB backend |
 | Client Sync | Adding sync to a client app |
 | Materialization | Optimizing read performance |
