--- a/apps/docs/content/docs/internal/adr/0005-row-vs-list-queries.mdx
+++ b/apps/docs/content/docs/internal/adr/0005-row-vs-list-queries.mdx
@@ -15,7 +15,7 @@ Treating all queries uniformly leads to either stale data or excessive invalidat
 
 ## Decision
 
-Converge explicitly distinguishes:
+RippleDB explicitly distinguishes:
 
 - **Row queries** (fetch by primary key)
 - **List queries** (WHERE, ORDER BY, JOIN, aggregates, pagination)
