--- a/apps/docs/content/docs/internal/adr/0007-list-queries-broad-invalidation.mdx
+++ b/apps/docs/content/docs/internal/adr/0007-list-queries-broad-invalidation.mdx
@@ -21,7 +21,7 @@ Without parsing SQL or re-implementing query logic in JS, it is impossible to de
 
 ## Decision
 
-Converge **always invalidates and reruns list queries broadly** when dependent entities change.
+RippleDB **always invalidates and reruns list queries broadly** when dependent entities change.
 
 Precision is intentionally sacrificed for correctness and simplicity.
 
