--- a/apps/docs/content/docs/internal/adr/0010-ui-cache-integration-optional.mdx
+++ b/apps/docs/content/docs/internal/adr/0010-ui-cache-integration-optional.mdx
@@ -13,7 +13,7 @@ Different applications use different UI frameworks and caching strategies. The c
 
 ## Decision
 
-Converge:
+RippleDB:
 
 - emits neutral `DbEvent`s from the write path
 - provides **optional UI integration helpers**
