--- a/apps/docs/content/docs/internal/adr/0011-list-dependency-registry.mdx
+++ b/apps/docs/content/docs/internal/adr/0011-list-dependency-registry.mdx
@@ -15,7 +15,7 @@ Hardcoding invalidation logic across the app leads to duplication and errors.
 
 ## Decision
 
-Converge supports an **optional list registry**:
+RippleDB supports an **optional list registry**:
 
 - maps list query key prefixes to dependent entities
 - used by UI adapters to invalidate queries
