--- a/apps/docs/content/docs/internal/adr/0012-crdts-out-of-scope.mdx
+++ b/apps/docs/content/docs/internal/adr/0012-crdts-out-of-scope.mdx
@@ -15,7 +15,7 @@ Mixing CRDT semantics into the core would complicate guarantees and APIs.
 
 ## Decision
 
-Converge does **not** include CRDT logic in the core.
+RippleDB does **not** include CRDT logic in the core.
 
 CRDTs may be integrated later via:
 
