--- a/apps/docs/content/docs/internal/adr/0013-simplicity-over-complexity.mdx
+++ b/apps/docs/content/docs/internal/adr/0013-simplicity-over-complexity.mdx
@@ -18,7 +18,7 @@ When choosing between:
 - complex incremental optimization
 - simple rerun-based correctness
 
-Converge **chooses simplicity and correctness**.
+RippleDB **chooses simplicity and correctness**.
 
 Optimizations are deferred until proven necessary.
 
