--- a/apps/docs/content/docs/internal/adr/0015-core-pure-and-minimal.mdx
+++ b/apps/docs/content/docs/internal/adr/0015-core-pure-and-minimal.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ADR-0015: Core Package Must Be Pure and Dependency-Minimal"
-description: "@converge/core contains only pure logic/types and must not depend on UI, runtime APIs, or DB drivers."
+description: "@rippledb/core contains only pure logic/types and must not depend on UI, runtime APIs, or DB drivers."
 ---
 
 ## Status
@@ -13,7 +13,7 @@ The core package is the foundation. If it depends on environment-specific librar
 
 ## Decision
 
-`@converge/core` must:
+`@rippledb/core` must:
 
 - contain only pure logic and types
 - have no dependency on UI libraries
