--- a/apps/docs/content/docs/internal/adr/0017-ui-integrations-live-in-bind-packages.mdx
+++ b/apps/docs/content/docs/internal/adr/0017-ui-integrations-live-in-bind-packages.mdx
@@ -15,7 +15,7 @@ Invalidation wiring is cache/UI-specific and not part of the replication core. H
 
 UI/caching integration is shipped as separate packages, for example:
 
-- `@converge/bind-tanstack`
+- `@rippledb/bind-tanstack`
 
 Responsibilities include:
 
