--- a/apps/docs/content/docs/internal/architecture/comparisons.mdx
+++ b/apps/docs/content/docs/internal/architecture/comparisons.mdx
@@ -11,7 +11,7 @@ description: Relationship to TinyBase, and why CRDT/rich-text is intentionally o
 - reactive joins
 - fine-grained updates
 
-### Converge strengths
+### RippleDB strengths
 
 - durable local truth
 - SQL-grade filtering/sorting
@@ -19,7 +19,7 @@ description: Relationship to TinyBase, and why CRDT/rich-text is intentionally o
 - simpler mental model
 - scalable datasets
 
-Converge trades:
+RippleDB trades:
 
 - automatic reactive joins
 
