--- a/apps/docs/content/docs/internal/architecture/index.mdx
+++ b/apps/docs/content/docs/internal/architecture/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Converge Architecture
-description: The end-to-end mental model for the Converge library (local-first replication + deterministic reads).
+title: RippleDB Architecture
+description: The end-to-end mental model for the RippleDB library (local-first replication + deterministic reads).
 ---
 
 This section is the “base doc”, split into focused pages so it’s easier to read and keep up to date.
