--- a/apps/docs/content/docs/internal/architecture/purpose-scope.mdx
+++ b/apps/docs/content/docs/internal/architecture/purpose-scope.mdx
@@ -1,11 +1,11 @@
 ---
 title: Purpose & Scope
-description: What Converge is, what it is not, and the deliberate non-goals.
+description: What RippleDB is, what it is not, and the deliberate non-goals.
 ---
 
 ## 0. Purpose of this document
 
-This document describes the **complete design** of the Converge library:
+This document describes the **complete design** of the RippleDB library:
 
 - what problems it solves
 - what problems it explicitly does **not** solve
@@ -20,9 +20,9 @@ This document describes the **complete design** of the Converge library:
 
 This is a **library perspective**, not an application template.
 
-## 1. What Converge is
+## 1. What RippleDB is
 
-Converge is a **local-first replication core** built around:
+RippleDB is a **local-first replication core** built around:
 
 - **durable local storage as the source of truth**
 - **append-only change logs**
@@ -39,9 +39,9 @@ It is designed for:
 - large, sortable/filterable tables
 - predictable performance and correctness
 
-## 2. What Converge is not
+## 2. What RippleDB is not
 
-Converge is **not**:
+RippleDB is **not**:
 
 - a database
 - an ORM
@@ -50,7 +50,7 @@ Converge is **not**:
 - a hosted backend
 - a real-time transport guarantee
 
-Converge **does not**:
+RippleDB **does not**:
 
 - try to “understand SQL”
 - parse WHERE clauses
