--- a/apps/docs/content/docs/internal/architecture/ui-integration.mdx
+++ b/apps/docs/content/docs/internal/architecture/ui-integration.mdx
@@ -25,7 +25,7 @@ Events describe **what changed**, not **what to refetch**.
 
 ## 14. UI cache integration (optional)
 
-Converge does **not** require TanStack Query. But it supports it well.
+RippleDB does **not** require TanStack Query. But it supports it well.
 
 ### 14.1 Why we need a helper
 
