--- a/apps/docs/content/docs/adapters/db-turso.mdx
+++ b/apps/docs/content/docs/adapters/db-turso.mdx
@@ -6,7 +6,7 @@ description: Edge-ready adapter for Turso and libSQL
 import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
-# @converge/db-turso
+# @rippledb/db-turso
 
 An adapter for [Turso](https://turso.tech/) and [libSQL](https://github.com/libsql/libsql), perfect for edge deployments and serverless functions.
 
@@ -15,17 +15,17 @@ An adapter for [Turso](https://turso.tech/) and [libSQL](https://github.com/libs
 <Tabs items={['pnpm', 'npm', 'yarn']}>
   <Tab value="pnpm">
 ```bash
-pnpm add @converge/db-turso @libsql/client
+pnpm add @rippledb/db-turso @libsql/client
 ```
   </Tab>
   <Tab value="npm">
 ```bash
-npm install @converge/db-turso @libsql/client
+npm install @rippledb/db-turso @libsql/client
 ```
   </Tab>
   <Tab value="yarn">
 ```bash
-yarn add @converge/db-turso @libsql/client
+yarn add @rippledb/db-turso @libsql/client
 ```
   </Tab>
 </Tabs>
@@ -33,7 +33,7 @@ yarn add @converge/db-turso @libsql/client
 ## Basic Usage
 
 ```ts
-import { TursoDb } from '@converge/db-turso';
+import { TursoDb } from '@rippledb/db-turso';
 
 const db = new TursoDb({
   url: process.env.TURSO_DATABASE_URL!,
@@ -59,8 +59,8 @@ db.close();
 ## With Materialization
 
 ```ts
-import { TursoDb } from '@converge/db-turso';
-import { createMaterializerConfig, SqliteDialect } from '@converge/materialize-db';
+import { TursoDb } from '@rippledb/db-turso';
+import { createMaterializerConfig, SqliteDialect } from '@rippledb/materialize-db';
 
 const db = new TursoDb<MySchema>({
   url: process.env.TURSO_DATABASE_URL!,
