--- a/apps/docs/content/docs/internal/adr/index.mdx
+++ b/apps/docs/content/docs/internal/adr/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Architecture Decision Records (ADRs)
-description: The canonical set of architectural decisions for Converge (with context, alternatives, and consequences).
+description: The canonical set of architectural decisions for RippleDB (with context, alternatives, and consequences).
 ---
 
 ADRs are how we keep the architecture coherent over time. Any change that contradicts an existing ADR should add a new ADR that explains why.
