--- a/apps/docs/content/docs/internal/architecture/package-structure.mdx
+++ b/apps/docs/content/docs/internal/architecture/package-structure.mdx
@@ -3,16 +3,16 @@ title: Package Structure & Dependency Rules
 description: How the monorepo is layered, why store-* vs db-* exists, and the dependency graph we enforce.
 ---
 
-This page locks in how we organize Converge as a monorepo so the core stays portable and we don’t accidentally couple the system to one runtime, database, or UI framework.
+This page locks in how we organize RippleDB as a monorepo so the core stays portable and we don’t accidentally couple the system to one runtime, database, or UI framework.
 
 ## The key split: client vs server persistence
 
-Converge has *two* categories of “backend” implementations that must not be blurred:
+RippleDB has *two* categories of “backend” implementations that must not be blurred:
 
 - **Client-side local truth**: the database the UI reads from, updated transactionally via replication.
-  - packages: `@converge/store-*`
+  - packages: `@rippledb/store-*`
 - **Server-side persistence**: the system that accepts changes and serves cursorable incremental history (and may materialize domain tables).
-  - packages: `@converge/db-*`
+  - packages: `@rippledb/db-*`
 
 If the names don’t encode this split, contributors will mix responsibilities and the design will erode.
 
@@ -20,40 +20,40 @@ If the names don’t encode this split, contributors will mix responsibilities a
 
 ### Foundation
 
-- `@converge/core`
+- `@rippledb/core`
   - HLC, tags, Change types, merge/apply helpers (pure logic)
 
 ### Orchestration (no database drivers)
 
-- `@converge/client`
+- `@rippledb/client`
   - client sync orchestration (outbox, pull/apply/push), policies, stream handling
-- `@converge/server`
+- `@rippledb/server`
   - server interfaces/helpers for append + cursor pull, policies
 
 ### Client truth stores
 
-- `@converge/store-sqlite`
-- `@converge/store-memory` (tests)
-- later: `@converge/store-indexeddb`, etc.
+- `@rippledb/store-sqlite`
+- `@rippledb/store-memory` (tests)
+- later: `@rippledb/store-indexeddb`, etc.
 
 ### Server persistence
 
-- `@converge/db-postgres`
-- `@converge/db-sqlite` (dev/tests)
-- later: `@converge/db-dynamodb`, etc.
+- `@rippledb/db-postgres`
+- `@rippledb/db-sqlite` (dev/tests)
+- later: `@rippledb/db-dynamodb`, etc.
 
 ### UI bindings (optional)
 
-- `@converge/bind-tanstack`
+- `@rippledb/bind-tanstack`
   - DbEvent → invalidateQueries, list registry, invalidation coalescing
 
 ## Dependency graph (must hold)
 
-- `@converge/core` → depends on nothing (or only tiny pure deps)
-- `@converge/client`, `@converge/server` → depend on `@converge/core`
-- `@converge/store-*` → depend on `@converge/core` (and optionally `@converge/client` interfaces)
-- `@converge/db-*` → depend on `@converge/core` (and optionally `@converge/server` interfaces)
-- `@converge/bind-*` → depends on `@converge/core` types + its UI library; **never required by core/client/server**
+- `@rippledb/core` → depends on nothing (or only tiny pure deps)
+- `@rippledb/client`, `@rippledb/server` → depend on `@rippledb/core`
+- `@rippledb/store-*` → depend on `@rippledb/core` (and optionally `@rippledb/client` interfaces)
+- `@rippledb/db-*` → depend on `@rippledb/core` (and optionally `@rippledb/server` interfaces)
+- `@rippledb/bind-*` → depends on `@rippledb/core` types + its UI library; **never required by core/client/server**
 
 To keep this true over time, we should enforce it with workspace constraints or lint rules.
 
